--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 <body>
     <div class="container">
         <h1 class="text-3xl font-bold text-gray-800 mb-6">Hangi Tasarımı Tercih Edersiniz?</h1>
-        <p class="text-gray-600 mb-8">Lütfen tercih ettiğiniz tasarımı seçerek oy kullanın.</p>
+        <p class="text-gray-600 mb-8">Lütfen tercih ettiğiniz e posta başlığını seçerek oy kullanın.</p>
 
         <div class="flex flex-col md:flex-row justify-center gap-6 mb-8">
             <!-- Varyasyon A -->
             <div class="bg-blue-100 p-6 rounded-lg shadow-md flex-1 min-w-[200px]">
                 <h2 class="text-2xl font-semibold text-blue-700 mb-4">Varyasyon A</h2>
-                <p class="text-blue-600 mb-6">Bu tasarımda mavi tonlar ve daha düz bir arayüz kullanılmıştır.</p>
+                <p class="text-blue-600 mb-6">Lüksünüzü küresel sahnede izleyin.</p>
                 <button id="voteA" class="vote-button bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-full focus:outline-none focus:ring-4 focus:ring-blue-300">
                     A'ya Oy Ver
                 </button>
@@ -102,7 +102,7 @@
             <!-- Varyasyon B -->
             <div class="bg-green-100 p-6 rounded-lg shadow-md flex-1 min-w-[200px]">
                 <h2 class="text-2xl font-semibold text-green-700 mb-4">Varyasyon B</h2>
-                <p class="text-green-600 mb-6">Bu tasarımda yeşil tonlar ve daha yumuşak köşeler bulunmaktadır.</p>
+                <p class="text-green-600 mb-6">Markanız artık sıradan olmayacak.</p>
                 <button id="voteB" class="vote-button bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-full focus:outline-none focus:ring-4 focus:ring-green-300">
                     B'ye Oy Ver
                 </button>
