--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-3xl font-bold text-gray-800 mb-6">Hangi Tasarımı Tercih Edersiniz?</h1>
+        <h1 class="text-3xl font-bold text-gray-800 mb-6">Hangi E-posta başlığı daha dikkat çekici?</h1>
         <p class="text-gray-600 mb-8">Lütfen tercih ettiğiniz e posta başlığını seçerek oy kullanın.</p>
 
         <div class="flex flex-col md:flex-row justify-center gap-6 mb-8">
